c4prj2_input/grade.txt
Grading at Thu Oct  3 02:35:14 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘checkEntry’:
input.c:9:6: error: ‘value’ undeclared (first use in this function)
   if(value=='0'){
      ^
input.c:9:6: note: each undeclared identifier is reported only once for each function it appears in
input.c:16:22: error: expected ‘;’ before ‘}’ token
   if(v=='?'){ val = 5}
                      ^
input.c: At top level:
input.c:32:1: error: unknown type name ‘deck_t’
 deck_t * hand_from_string(const char * str, future_cards_t * fc){
 ^
input.c:32:45: error: unknown type name ‘future_cards_t’
 deck_t * hand_from_string(const char * str, future_cards_t * fc){
                                             ^
input.c:69:1: error: unknown type name ‘deck_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
 ^
input.c:69:22: error: unknown type name ‘FILE’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                      ^
input.c:69:32: error: unknown type name ‘size_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                                ^
input.c:69:50: error: unknown type name ‘future_cards_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                                                  ^
input.c: In function ‘checkEntry’:
input.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
